Girish - Changes the code and added some Pages and files to it

--- a/css/loginpage.css
+++ b/css/loginpage.css
@@ -4,6 +4,17 @@ body,
   height: 100%;
 }
 
+body{
+  /*background-color: lightgray;*/
+  background-image: url(background.jpg);
+  background-size:  100%;
+  /* Other existing styles */
+}
+
+
+
+
+
 .bg-image {
   /* Full height */
   height: 100%;
