--- a/views/add_student.ejs
+++ b/views/add_student.ejs
@@ -1,6 +1,6 @@
 
 <!-- css link -->
-<link rel="stylesheet" href="../css/loginpage.css">
+<link rel="stylesheet" href="../css/add_student.css">
 <!-- add student form -->
 <% if (locals.user) {%>
   <div class="container mt-4 col-md-6">
