--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -6,7 +6,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand mx-4" href="/dashboard">
-          Placement Cell</a>
+        Placement Portal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,15 @@
               <li class="nav-item mx-4">
                 <a class="navbar-brand" href="/interview/add-interview">Manage Interview</a>
               </li>
-
+              <li class="nav-item mx-4">
+                <a class="navbar-brand" href="/jobs">Interview</a>
+              </li>    
+              <li class="nav-item mx-4">
+                <a class="navbar-brand" href="/resume">Professional Resume</a>
+              </li>         
+              <!-- <li class="nav-item mx-4">
+                <a class="navbar-brand" href="/review">Reviews</a>
+              </li> -->
             </ul>
             <form>
               <a class="navbar-brand p-1" href="/download"><i class="fa fa-download"
